--- a/juego-generaciones-react/package.json
+++ b/juego-generaciones-react/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://danielgz21.github.io/UI_Digital_Dani",
   "name": "juego-generaciones-react",
   "private": true,
   "version": "1.0.0",
@@ -6,23 +7,26 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tailwind-init": "tailwindcss init -p"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.18.0",
     "axios": "^1.7.2",
+    "framer-motion": "^11.3.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "@react-three/fiber": "^8.18.0",
-    "@react-three/drei": "^9.108.4",
-    "@react-three/cannon": "^6.6.0",
-    "three": "^0.166.1",
-    "framer-motion": "^11.3.19"
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
